# Student_Management_System

./: CMakeLists.txt  README.md
include/: sms.hpp  student.hpp
src/: main.cpp  management_system.cpp  sms.cpp  student.cpp
